fix navigation spacing

--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -108,7 +108,7 @@
   }
   
   #main-navigation {
-    word-spacing: 0.15em;
+    word-spacing: 0.5em;
     padding-bottom: 0.55em;  
   }
   
